Closed Bug 631575 Opened 15 years ago Closed 15 years ago

Failing "!mPresShell && !mWindow" assertion in CreateDeviceContext() after SetDocument(), in content processes

Categories

(Core :: Web Painting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: cjones, Assigned: cjones)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #631359 +++ The assertion failing is ###!!! ASSERTION: This will screw up our existing presentation: '!mPresShell && !mWindow', file /home/cjones/mozilla/mozilla-central/layout Last unresolved issue in original bug > - hit MakeWindow(this=0x28362b0) breakpoint below > nsDocShell::CreateContentViewer. Hm. > - hit failing CreateDeviceContext(this=0x28362b0) assertion below > txMozillaXMLOutput::createResultDocument. Looks like a likely regression from bug 581536. Wasn't biting firefox, presumably, because there is no mWindow there for content frames or something, right? I _think_, though roc should confirm, that the right fix is to null out mWindow right before the InitInternal call in SetDocumentInternal.
Not sure whether you or bz should review this, it's a fairly inbred bug. But a trivial patch so doesn't really matter. With this and bug 631585, we're back to passing crashtest-ipc.
Assignee: nobody → jones.chris.g
Attachment #510539 - Flags: review?(roc)
Comment on attachment 510539 [details] [diff] [review] Clear the old window when setting a new document, and re-enable tests disabled in bug 631359 Don't think this is a risky patch, and the benefit is passing crashtest-ipc tests.
Attachment #510539 - Flags: approval2.0?
Comment on attachment 510539 [details] [diff] [review] Clear the old window when setting a new document, and re-enable tests disabled in bug 631359 a=dbaron, but only if you land prior to final beta (i.e., land today or tomorrow)
Attachment #510539 - Flags: approval2.0? → approval2.0+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: