Bug 631575: Clear the old window when setting a new document, and re-enable tests disabled in bug 631359. r=roc a=a